--- a/index.html
+++ b/index.html
@@ -2,14 +2,26 @@
 <html>
     <head>
         <title>Engineering</title>
-        <link rel="stylesheet" type="text/css" href="../CSS/style.css">
+        <link rel="stylesheet" type="text/css" href="../git1/assets/css/style.css">
+        <link rel="preconnect" href="https://fonts.googleapis.com">
+        <link href="https://fonts.googleapis.com/css2?family=Alumni+Sans+Collegiate+One:ital@1&family=Kanit:wght@300&family=Playpen+Sans:wght@500&display=swap" rel="stylesheet">
+        <link href="https://fonts.googleapis.com/css2?family=Tilt+Neon&display=swap" rel="stylesheet">
     </head>
     <body>
         <div class="head">
             <h1>Government college of Engineering,Tirunelveli</h1>
             <div>
-                <img src="../img/cse.jpg" alt="">
+                <img src="../git1/assets/image/cse.jpg" alt="CSE">
             </div>
+        </div>
+        <div class="navbar">
+            <h1 class="logo"><a href="/">Santhosh</a></h1>
+            <ul>
+                <li><a href="/">Home</a></li>
+                <li><a href="/">About</a></li>
+                <li><a href="/">Courses</a></li>
+            </ul>
+            <button>Contact Us</button>
         </div>
         <div class="intro">
             <h2>Department</h2>
