--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 <html>
     <head>
         <title>Engineering</title>
-        <link rel="stylesheet" type="text/css" href="../git1/assets/css/style.css">
+        <link rel="stylesheet" href="./assets/css/style.css">
         <link rel="preconnect" href="https://fonts.googleapis.com">
         <link href="https://fonts.googleapis.com/css2?family=Alumni+Sans+Collegiate+One:ital@1&family=Kanit:wght@300&family=Playpen+Sans:wght@500&display=swap" rel="stylesheet">
         <link href="https://fonts.googleapis.com/css2?family=Tilt+Neon&display=swap" rel="stylesheet">
@@ -11,7 +11,7 @@
         <div class="head">
             <h1>Government college of Engineering,Tirunelveli</h1>
             <div>
-                <img src="../git1/assets/image/cse.jpg" alt="CSE">
+                <img src="./assets/image/cse.jpg" alt="">
             </div>
         </div>
         <div class="navbar">
