--- a/index.html
+++ b/index.html
@@ -1,75 +1,119 @@
 <!DOCTYPE html>
 <html>
-    <head>
-        <title>Engineering</title>
-        <link rel="stylesheet" href="./assets/css/style.css">
-        <link rel="preconnect" href="https://fonts.googleapis.com">
-        <link href="https://fonts.googleapis.com/css2?family=Alumni+Sans+Collegiate+One:ital@1&family=Kanit:wght@300&family=Playpen+Sans:wght@500&display=swap" rel="stylesheet">
-        <link href="https://fonts.googleapis.com/css2?family=Tilt+Neon&display=swap" rel="stylesheet">
-    </head>
-    <body>
-        <div class="head">
-            <h1>Government college of Engineering,Tirunelveli</h1>
-            <div>
-                <img src="./assets/image/cse.jpg" alt="">
+
+<head>
+    <title>Engineering</title>
+    <link rel="stylesheet" href="./assets/css/style.css">
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+    <link
+        href="https://fonts.googleapis.com/css2?family=Alumni+Sans+Collegiate+One:ital@1&family=Kanit:wght@300&family=Playpen+Sans:wght@500&display=swap"
+        rel="stylesheet">
+    <link href="https://fonts.googleapis.com/css2?family=Tilt+Neon&display=swap" rel="stylesheet">
+</head>
+
+<body>
+    <div class="head">
+        <h1>Government college of Engineering,Tirunelveli</h1>
+    </div>
+    <div class="navbar">
+        <h1 class="logo"><a href="/">Santhosh</a></h1>
+        <ul>
+            <li><a href="/">Home</a></li>
+            <li><a href="/">About</a></li>
+            <li><a href="/">Courses</a></li>
+        </ul>
+        <button>Contact Us</button>
+    </div>
+    <div class="intro">
+        <h2>Departments</h2>
+        <p>There are five departments avialable in our college like...</p>
+        <div class="card1">
+            <div class="cards1">
+                <h1>Computer science and Engineering</h1>
+                <p>Lorem ipsum dolor sit amet consectetur, adipisicing elit. Velit sapiente minima accusamus officia
+                    rerum quis, ipsam facere porro aliquid, fuga, consectetur magnam ipsa nobis dolore? Consequuntur
+                    magnam quas eveniet minima.</p>
+            </div>
+            <div class="cards1">
+                <h1>Mechanical and Engineering</h1>
+                <p>Lorem ipsum dolor sit amet consectetur, adipisicing elit. Velit sapiente minima accusamus officia
+                    rerum quis, ipsam facere porro aliquid, fuga, consectetur magnam ipsa nobis dolore? Consequuntur
+                    magnam quas eveniet minima.</p>
+            </div>
+            <div class="cards1">
+                <h1>Electronics Engineering</h1>
+                <p>Lorem ipsum dolor sit amet consectetur, adipisicing elit. Velit sapiente minima accusamus officia
+                    rerum quis, ipsam facere porro aliquid, fuga, consectetur magnam ipsa nobis dolore? Consequuntur
+                    magnam quas eveniet minima.</p>
             </div>
         </div>
-        <div class="navbar">
-            <h1 class="logo"><a href="/">Santhosh</a></h1>
-            <ul>
-                <li><a href="/">Home</a></li>
-                <li><a href="/">About</a></li>
-                <li><a href="/">Courses</a></li>
-            </ul>
-            <button>Contact Us</button>
+        <div class="card2">
+            <div class="cards2">
+                <h1>Electrical Engineering</h1>
+                <p>Lorem ipsum dolor sit amet consectetur, adipisicing elit. Velit sapiente minima accusamus officia rerum
+                    quis, ipsam facere porro aliquid, fuga, consectetur magnam ipsa nobis dolore? Consequuntur magnam quas
+                    eveniet minima.</p>
+            </div>
+            <div class="cards2">
+                <h1>Civil Engineering</h1>
+                <p>Lorem ipsum dolor sit amet consectetur, adipisicing elit. Velit sapiente minima accusamus officia rerum
+                    quis, ipsam facere porro aliquid, fuga, consectetur magnam ipsa nobis dolore? Consequuntur magnam quas
+                    eveniet minima.</p>
+            </div>
+            <div class="cards2">
+                <h1>Science and Humanities</h1>
+                <p>Lorem ipsum dolor sit amet consectetur, adipisicing elit. Velit sapiente minima accusamus officia rerum
+                    quis, ipsam facere porro aliquid, fuga, consectetur magnam ipsa nobis dolore? Consequuntur magnam quas
+                    eveniet minima.</p>
+            </div>
         </div>
-        <div class="intro">
-            <h2>Department</h2>
-            <p>There are five departments avialable in our college like...</p>
-            <ol style="list-style-type:disc;">
-                <li>Computer Science and engineering</li>
-                <li>Mechanical Engineering</li>
-                <li>Eletronics Engineering</li>
-                <li>Eletrical Engineering</li>
-                <li>Civil Engineering</li>
-            </ol>
-        </div>
-         <div class="table">
-            <p><b>Here some names of the students of CSE dept.</b></p>
-            <table border="dash">
-                <thead>
-                    <th>Name</th>
-                    <th>Age</th>
-                    <th>Marks</th>
-                    <th>Places</th>
-                </thead>
-                <tbody>
-                    <tr>
-                        <td>Santhosh</td>
-                        <td>17</td>
-                        <td>193.5</td>
-                        <td>Market</td>
-                    </tr>              
-                    <tr>
-                        <td>Sudharsan</td>
-                        <td>18</td>
-                        <td>196.5</td>
-                        <td>Highground</td>
+    </div>
+    <div class="table">
+        <p><b>Here some names of the students of CSE dept.</b></p>
+        <table border="dash">
+            <thead>
+                <th>Name</th>
+                <th>Age</th>
+                <th>Marks</th>
+                <th>Places</th>
+            </thead>
+            <tbody>
+                <tr>
+                    <td>Santhosh</td>
+                    <td>17</td>
+                    <td>193.5</td>
+                    <td>Market</td>
+                </tr>
+                <tr>
+                    <td>Sudharsan</td>
+                    <td>18</td>
+                    <td>196.5</td>
+                    <td>Highground</td>
 
-                    </tr>
-                    <tr>
-                        <td>Arsath</td>
-                        <td>17</td>
-                        <td>190</td>
-                        <td>Kurumbur</td>
-                    </tr>     
-                </tbody>
-            </table> <br>   
-        </div>
-        <div class="description">
-          <img src="https://lh3.googleusercontent.com/p/AF1QipNAJaQbes13b07eZliWq6T-nprsacfg_hWPBBOw=s680-w680-h510" alt="Government college Engineering Tirunelveli" width="425" height="325" /> <br>
-          <iframe width="560" height="315" src="https://www.youtube.com/embed/fMopFRcvImQ?si=Oo1Solc514FQZbvd" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" allowfullscreen></iframe>
-          <p>Government College of Engineering, Tirunelveli, is a state-owned Engineering Institute located in the city of Tirunelveli in the state of Tamil Nadu. Tirunelveli is often referred as the 'Oxford of south India' due to the larger number of educational institutions present. It is affiliated to Anna University, Chennai and is a AICTE and DOTE approved educational institution in Tamil Nadu. It was established in the year 1981. The college is spread over an area of 23 hectares. The institution offers five undergraduate and five postgraduate programs.</p>
-        </div>
-    </body>
+                </tr>
+                <tr>
+                    <td>Arsath</td>
+                    <td>17</td>
+                    <td>190</td>
+                    <td>Kurumbur</td>
+                </tr>
+            </tbody>
+        </table> <br>
+    </div>
+    <div class="description">
+        <img src="https://lh3.googleusercontent.com/p/AF1QipNAJaQbes13b07eZliWq6T-nprsacfg_hWPBBOw=s680-w680-h510"
+            alt="Government college Engineering Tirunelveli" width="425" height="325" /> <br>
+        <iframe width="560" height="315" src="https://www.youtube.com/embed/fMopFRcvImQ?si=Oo1Solc514FQZbvd"
+            title="YouTube video player" frameborder="0"
+            allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share"
+            allowfullscreen></iframe>
+        <p>Government College of Engineering, Tirunelveli, is a state-owned Engineering Institute located in the city of
+            Tirunelveli in the state of Tamil Nadu. Tirunelveli is often referred as the 'Oxford of south India' due to
+            the larger number of educational institutions present. It is affiliated to Anna University, Chennai and is a
+            AICTE and DOTE approved educational institution in Tamil Nadu. It was established in the year 1981. The
+            college is spread over an area of 23 hectares. The institution offers five undergraduate and five
+            postgraduate programs.</p>
+    </div>
+</body>
+
 </html>
