--- a/index.html
+++ b/index.html
@@ -13,16 +13,42 @@
 
 <body>
     <div class="head">
-        <h1>Government college of Engineering,Tirunelveli</h1>
+        <div class="top">
+            <h1>Government college of Engineering, Tirunelveli</h1>
+        </div>
     </div>
     <div class="navbar">
-        <h1 class="logo"><a href="/">Santhosh</a></h1>
+        <h1 class="logo"><a href="https://github.com/Santhosh-006">Santhosh</a></h1>
         <ul>
             <li><a href="/">Home</a></li>
             <li><a href="/">About</a></li>
             <li><a href="/">Courses</a></li>
         </ul>
         <button>Contact Us</button>
+    </div>
+    <div class="content">
+        <p>Government College of Engineering, Tirunelveli, is a state-owned Engineering Institute located in the city of
+            Tirunelveli in the state of Tamil Nadu. Tirunelveli is often referred as the 'Oxford of south India' due to
+            the larger number of educational institutions present. It is affiliated to Anna University, Chennai and is a
+            AICTE and DOTE approved educational institution in Tamil Nadu. It was established in the year 1981. The
+            college is spread over an area of 23 hectares. The institution offers five undergraduate and five
+            postgraduate programs.</p>
+        <img src="https://lh3.googleusercontent.com/p/AF1QipNAJaQbes13b07eZliWq6T-nprsacfg_hWPBBOw=s680-w680-h510"
+            alt="Government college Engineering Tirunelveli" width="425" height="325" />
+    </div>
+    <div class="description">
+        <iframe width="760" height="315" src="https://www.youtube.com/embed/fMopFRcvImQ?si=Oo1Solc514FQZbvd"
+            title="YouTube video player" frameborder="0"
+            allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share"
+            allowfullscreen></iframe>
+        <p>
+            Our mission is to provide the best possible educational facilities to prepare the students for successful
+            career in a globalsociety.Enhance professional competency and analytical thinking to cater the needs of the
+            Industry and researchorganizations.Develop socially responsible technocrats with high ethical and
+            professional integrity.We have a team of skilled, experienced and dedicated Professors, administrative and
+            non-teaching staff who are committed to achieve excellence in every activity of the institute.
+        </p>
+
     </div>
     <div class="intro">
         <h2>Departments</h2>
@@ -50,70 +76,68 @@
         <div class="card2">
             <div class="cards2">
                 <h1>Electrical Engineering</h1>
-                <p>Lorem ipsum dolor sit amet consectetur, adipisicing elit. Velit sapiente minima accusamus officia rerum
-                    quis, ipsam facere porro aliquid, fuga, consectetur magnam ipsa nobis dolore? Consequuntur magnam quas
+                <p>Lorem ipsum dolor sit amet consectetur, adipisicing elit. Velit sapiente minima accusamus officia
+                    rerum
+                    quis, ipsam facere porro aliquid, fuga, consectetur magnam ipsa nobis dolore? Consequuntur magnam
+                    quas
                     eveniet minima.</p>
             </div>
             <div class="cards2">
                 <h1>Civil Engineering</h1>
-                <p>Lorem ipsum dolor sit amet consectetur, adipisicing elit. Velit sapiente minima accusamus officia rerum
-                    quis, ipsam facere porro aliquid, fuga, consectetur magnam ipsa nobis dolore? Consequuntur magnam quas
+                <p>Lorem ipsum dolor sit amet consectetur, adipisicing elit. Velit sapiente minima accusamus officia
+                    rerum
+                    quis, ipsam facere porro aliquid, fuga, consectetur magnam ipsa nobis dolore? Consequuntur magnam
+                    quas
                     eveniet minima.</p>
             </div>
             <div class="cards2">
                 <h1>Science and Humanities</h1>
-                <p>Lorem ipsum dolor sit amet consectetur, adipisicing elit. Velit sapiente minima accusamus officia rerum
-                    quis, ipsam facere porro aliquid, fuga, consectetur magnam ipsa nobis dolore? Consequuntur magnam quas
+                <p>Lorem ipsum dolor sit amet consectetur, adipisicing elit. Velit sapiente minima accusamus officia
+                    rerum
+                    quis, ipsam facere porro aliquid, fuga, consectetur magnam ipsa nobis dolore? Consequuntur magnam
+                    quas
                     eveniet minima.</p>
             </div>
         </div>
     </div>
-    <div class="table">
-        <p><b>Here some names of the students of CSE dept.</b></p>
-        <table border="dash">
-            <thead>
-                <th>Name</th>
-                <th>Age</th>
-                <th>Marks</th>
-                <th>Places</th>
-            </thead>
-            <tbody>
-                <tr>
-                    <td>Santhosh</td>
-                    <td>17</td>
-                    <td>193.5</td>
-                    <td>Market</td>
-                </tr>
-                <tr>
-                    <td>Sudharsan</td>
-                    <td>18</td>
-                    <td>196.5</td>
-                    <td>Highground</td>
+    <div class="students">
+        <p><b>&#9734;Here some stars of CSE&#9734; </b></p>
+        <div class="table">
+            <table border="dash">
+                <thead>
+                    <th>Name</th>
+                    <th>Age</th>
+                    <th>Marks</th>
+                    <th>Places</th>
+                </thead>
+                <tbody>
+                    <tr>
+                        <td>Santhosh</td>
+                        <td>17</td>
+                        <td>193.5</td>
+                        <td>Market</td>
+                    </tr>
+                    <tr>
+                        <td>Sudharsan</td>
+                        <td>18</td>
+                        <td>196.5</td>
+                        <td>Highground</td>
 
-                </tr>
-                <tr>
-                    <td>Arsath</td>
-                    <td>17</td>
-                    <td>190</td>
-                    <td>Kurumbur</td>
-                </tr>
-            </tbody>
-        </table> <br>
+                    </tr>
+                    <tr>
+                        <td>Arsath</td>
+                        <td>17</td>
+                        <td>190</td>
+                        <td>Kurumbur</td>
+                    </tr>
+                </tbody>
+            </table>
+        </div>
     </div>
-    <div class="description">
-        <img src="https://lh3.googleusercontent.com/p/AF1QipNAJaQbes13b07eZliWq6T-nprsacfg_hWPBBOw=s680-w680-h510"
-            alt="Government college Engineering Tirunelveli" width="425" height="325" /> <br>
-        <iframe width="560" height="315" src="https://www.youtube.com/embed/fMopFRcvImQ?si=Oo1Solc514FQZbvd"
-            title="YouTube video player" frameborder="0"
-            allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share"
-            allowfullscreen></iframe>
-        <p>Government College of Engineering, Tirunelveli, is a state-owned Engineering Institute located in the city of
-            Tirunelveli in the state of Tamil Nadu. Tirunelveli is often referred as the 'Oxford of south India' due to
-            the larger number of educational institutions present. It is affiliated to Anna University, Chennai and is a
-            AICTE and DOTE approved educational institution in Tamil Nadu. It was established in the year 1981. The
-            college is spread over an area of 23 hectares. The institution offers five undergraduate and five
-            postgraduate programs.</p>
-    </div>
+    <footer>
+        <p>Copyrights&#169;|<a href="https://github.com/Santhosh-006">Santhosh</a></p>
+    </footer>
+
 </body>
 
 </html>
