--- a/index.html
+++ b/index.html
@@ -18,36 +18,46 @@
         </div>
     </div>
     <div class="navbar">
-        <h1 class="logo"><a href="https://github.com/Santhosh-006">Santhosh</a></h1>
-        <ul>
+        <h1 class="logo"><a href="index.html">Santhosh</a></h1>
+        <ul class="ull">
             <li><a href="/">Home</a></li>
             <li><a href="/">About</a></li>
             <li><a href="/">Courses</a></li>
+            <li><button>Contact Us</button></li>
         </ul>
-        <button>Contact Us</button>
+        
     </div>
     <div class="content">
-        <p>Government College of Engineering, Tirunelveli, is a state-owned Engineering Institute located in the city of
-            Tirunelveli in the state of Tamil Nadu. Tirunelveli is often referred as the 'Oxford of south India' due to
-            the larger number of educational institutions present. It is affiliated to Anna University, Chennai and is a
-            AICTE and DOTE approved educational institution in Tamil Nadu. It was established in the year 1981. The
-            college is spread over an area of 23 hectares. The institution offers five undergraduate and five
-            postgraduate programs.</p>
-        <img src="https://lh3.googleusercontent.com/p/AF1QipNAJaQbes13b07eZliWq6T-nprsacfg_hWPBBOw=s680-w680-h510"
+        <div>
+            <h1>About</h1>
+            <p>Government College of Engineering, Tirunelveli, is a state-owned Engineering Institute located in the city of
+                Tirunelveli in the state of Tamil Nadu. Tirunelveli is often referred as the 'Oxford of south India' due to
+                the larger number of educational institutions present. It is affiliated to Anna University, Chennai and is a
+                AICTE and DOTE approved educational institution in Tamil Nadu. It was established in the year 1981. The
+                college is spread over an area of 23 hectares. The institution offers five undergraduate and five
+                postgraduate programs.</p>
+        </div>
+        <div class="content-image">
+            <img src="https://lh3.googleusercontent.com/p/AF1QipNAJaQbes13b07eZliWq6T-nprsacfg_hWPBBOw=s680-w680-h510"
             alt="Government college Engineering Tirunelveli" width="425" height="325" />
+        </div>
     </div>
     <div class="description">
-        <iframe width="760" height="315" src="https://www.youtube.com/embed/fMopFRcvImQ?si=Oo1Solc514FQZbvd"
-            title="YouTube video player" frameborder="0"
-            allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share"
-            allowfullscreen></iframe>
-        <p>
+       <div>
+        <iframe width="560" height="315" src="https://www.youtube.com/embed/fMopFRcvImQ?si=Oo1Solc514FQZbvd"
+        title="YouTube video player" frameborder="0"
+        allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share"
+        allowfullscreen></iframe>
+       </div>        
+       <div>
+            <h1>Mission</h1>
+            <p>
             Our mission is to provide the best possible educational facilities to prepare the students for successful
             career in a globalsociety.Enhance professional competency and analytical thinking to cater the needs of the
             Industry and researchorganizations.Develop socially responsible technocrats with high ethical and
             professional integrity.We have a team of skilled, experienced and dedicated Professors, administrative and
-            non-teaching staff who are committed to achieve excellence in every activity of the institute.
-        </p>
+            non-teaching staff who are committed to achieve excellence in every activity of the institute.</p>
+       </div>
 
     </div>
     <div class="intro">
@@ -101,7 +111,7 @@
         </div>
     </div>
     <div class="students">
-        <p><b>&#9734;Here some stars of CSE&#9734; </b></p>
+        <p><b><span class="star">&#9734;</span>Here some stars of CSE <span class="star">&#9734;</span> </b></p>
         <div class="table">
             <table border="dash">
                 <thead>
@@ -135,7 +145,7 @@
         </div>
     </div>
     <footer>
-        <p>Copyrights&#169;|<a href="https://github.com/Santhosh-006">Santhosh</a></p>
+        <p> &#169;Copyrights | <a href="https://github.com/Santhosh-006">  Santhosh</a> <span class="all">All rights are reserved</span></p>
     </footer>
 
 </body>
